Instead of new <Java type>(...), use <Java type>.valueOf(...), allowing jvm caches.
Suggested by: dmiles (on #lisp, freenode.org IRC)